test/tests/stages/14_pointers/valid/dereference/simple.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(3)
  ;
  int
  *
  identifier(ptr)
  =
  &
  identifier(x)
  ;
  return
  *
  identifier(ptr)
  ;
  }
